--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,6 @@ section {
 
 @media screen and (max-width: 1400px) {
     .container {
-        gap: 20px;
         width: var(--tablet-width);
     }
 }
